# NGHVK_162

./: ".gitignore"  .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/comunicacao_llm/share/comunicacao_llm/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/comunicacao_llm/share/comunicacao_llm/cmake/: comunicacao_llmConfig.cmake
install/controle_audio/share/controle_audio/: package.bash  package.ps1  package.sh
install/listening_control/lib/listening_control/: llm_ia_node
install/listening_control/share/ament_index/resource_index/parent_prefix_path/: listening_control
install/listening_control/share/listening_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/NGHVK_160/: CMakeLists.txt
src/NGHVK_160/src/: listening_control.cpp  llm_ia_node.cpp
src/NGHVK_160/src/install/: local_setup.sh  setup.sh
src/NGHVK_160/src/log/: latest_build
src/boca/: CMakeLists.txt  package.xml
src/boca/src/: boca_node.cpp
src/cerebro/: CMakeLists.txt  package.xml
src/cerebro/src/: cerebro_node.cpp
src/comunicacao_llm/: CMakeLists.txt
src/comunicacao_llm/src/: llm_ia_node.cpp
src/controle_audio/: setup.cfg  setup.py
src/controle_audio/controle_audio/: listening_control.py
src/controle_audio/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/controle_audio/install/controle_audio/lib/controle_audio/: listening_control
src/controle_audio/install/controle_audio/share/controle_audio/: package.dsv  package.sh  package.xml  package.zsh
src/controle_audio/log/: latest_build
src/controle_objetivo/: CMakeLists.txt  package.xml
src/controle_objetivo/src/: .brain_node.cpp.swp  brain_node.cpp
src/localizacao/: CMakeLists.txt  package.xml
src/localizacao/src/: localizacao_node.cpp
src/mapeamento/: CMakeLists.txt  package.xml
src/mapeamento/src/: mapeamento_node.cpp
src/memoria/: CMakeLists.txt  package.xml
src/memoria/src/: memoria_node.cpp
src/olhos/: CMakeLists.txt  package.xml
src/olhos/src/: olhos_node.cpp
src/ouvido/: package.xml  setup.cfg  setup.py
src/ouvido/ouvido/: ouvido_node.py
src/serial_comu/: package.xml  setup.cfg  setup.py
src/serial_comu/serial_comu/: serial_node.cpp  serial_node.py
src/teste_opencv/: CMakeLists.txt  package.xml
src/teste_opencv/src/: teste_opencv_node.cpp
